--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "redux-persist": "^6.0.0",
