--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "unique-username-generator": "^1.4.0"
   }
 }
