--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.8",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
