--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon ./backend/index.js",
     "start": "node ./backend/index.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix forntend && npm run build --prefix forntend"
   },
   "repository": {
     "type": "git",
